# Visual-Data-Lessons

./: Makefile  README.md  pyproject.toml  requirements.txt
scenes/common/: intro_scene.py  outro_scene.py
visual_data_lessons/: config.py
visual_data_lessons/common/: intro_scene.py  outro_scene.py
visual_data_lessons/config/: config_horizontal.cfg
