[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "visual_data_lessons"
version = "0.1.0"
description = "A project for creating educational content using Manim and Python."
authors = [
  { name = "Daniel Gomez"},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.8"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | assets
)/
'''

[tool.ruff.lint.isort]
known-first-party = ["visual_data_lessons"]
force-sort-within-sections = true
